--- a/style.css
+++ b/style.css
@@ -20,3 +20,8 @@ margin: 10px;
     border: black solid;
     padding: 20px;
 }
+.daily {
+    background-color: blue;
+    color:whitesmoke;
+    margin: 5px;    
+}
