--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
+body {
+    /* background-image: url("https://thewallpaper.co//wp-content/uploads/2016/08/background-images-love-amazing-nice-weather-sky-romance-high-resolution-widescreen-1920x1080.jpg"); */
+    background-color: #cccccc;
+}
 .jumbotron {
     text-align: center;
     color: darkslategray;
     background-color: bisque;
     padding: 20px;
-}
-.container {
-margin: 10px;  
+    /* border: black solid; */
 }
 
 #search {
@@ -13,15 +15,18 @@ margin: 10px;
 
 }
 #search-results {
-    border: black solid;
+    /* border: black solid; */
     padding: 20px;
+   
 }
 #forecast{
-    border: black solid;
-    padding: 20px;
+    /* border: black solid; */
+    padding: 15px;
+    margin: auto;
+
 }
 .daily {
-    background-color: blue;
+    background-color: gray;
     color:whitesmoke;
     margin: 5px;    
 }
