--- a/style.css
+++ b/style.css
@@ -10,7 +10,6 @@ body {
     color: darkslategray;
     background-color: bisque;
     padding: 20px;
-    border: black solid;
 }
 
 #searchBlock {
@@ -26,21 +25,22 @@ body {
     float: right;
 }
 #search-results {
-    border: black solid;
     padding: 20px;
 }
 
 #forecast{
-    border: black solid;
     padding: 15px;
     margin: auto;
 
 }
 .daily {
-    background-color: gray;
+    margin: 20px;
+    background-color: lightsalmon;
+    border-radius: 10px;
     color:whitesmoke;
-    margin: 5px; 
-    box-sizing: border-box;   
+    margin: 3px; 
+    box-sizing: border-box; 
+ 
 }
 .city-list {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
